macros/src/snapshots/ez_event_handler_macro__event_handler__tests__processor_4.snap
---
source: macros/src/event_handler.rs
expression: formatted
---
pub struct EventEnvelope {
    pub event: Event,
    pub span: ::tracing::Span,
    pub id: ::uuid::Uuid,
}
impl EventEnvelope {
    pub fn with_span(self, span: &::tracing::Span) -> Self {
        Self { span: span.clone(), ..self }
    }
}
#[derive(::serde::Serialize, ::serde::Deserialize, Clone)]
pub enum Event {
    EventNoFieldsEnvArc { #[serde(skip)] arc: Option<Arc<Something>> },
}
impl Event {
    pub fn new_event_no_fields_env_arc(
        #[serde(skip)]
        arc: Option<Arc<Something>>,
    ) -> EventEnvelope {
        return EventEnvelope {
            span: ::tracing::Span::current(),
            id: ::uuid::Uuid::new_v4(),
            event: Event::EventNoFieldsEnvArc { arc },
        };
    }
}
impl From<Event> for EventEnvelope {
    fn from(input: Event) -> EventEnvelope {
        EventEnvelope {
            span: ::tracing::Span::current(),
            id: ::uuid::Uuid::new_v4(),
            event: input,
        }
    }
}
impl std::fmt::Debug for Event {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        match self {
            Event::EventNoFieldsEnvArc { .. } => {
                write!(f, stringify!(EventNoFieldsEnvArc))
            }
            _ => write!(f, "Unknown Event"),
        }
    }
}
impl EventHandler {
    async fn test_processor_4(
        &self,
        env: EventEnvelope,
        #[allow(unused)]
        queue: &mut ::std::collections::VecDeque<EventEnvelope>,
    ) {
        let Event::EventNoFieldsEnvArc { arc } = env.event else {
            unreachable!();
        };
        {
            println!("Hello world!");
        }
    }
    fn __event_preprocess(&self, _event: &mut Event) {}
    #[tracing::instrument(skip_all, parent = &env.span)]
    pub async fn handle(
        &self,
        mut env: EventEnvelope,
        queue: &mut ::std::collections::VecDeque<EventEnvelope>,
    ) {
        use Event::*;
        tracing::debug!("handle: {:?}", & env.event);
        self.__event_preprocess(&mut env.event);
        match env.event {
            Event::EventNoFieldsEnvArc { .. } => self.test_processor_4(env, queue).await,
        };
    }
    pub async fn run(&self, mut rx: ::tokio::sync::mpsc::Receiver<EventEnvelope>) {
        let mut queue: ::std::collections::VecDeque<EventEnvelope> = ::std::collections::VecDeque::new();
        loop {
            match rx.recv().await {
                Some(envelope) => queue.push_back(envelope),
                None => {
                    tracing::error!("event channel closed unexpectedly");
                    break;
                }
            }
            while let Ok(envelope) = rx.try_recv() {
                queue.push_back(envelope);
            }
            while let Some(envelope) = queue.pop_front() {
                self.handle(envelope, &mut queue).await;
            }
        }
    }
}
