macros/src/snapshots/ez_event_handler_macro__event_handler__tests__processor_6.snap
---
source: macros/src/event_handler.rs
expression: formatted
---
pub struct EEEEnvelope {
    pub event: CustomEvent,
    pub span: ::tracing::Span,
    pub id: ::uuid::Uuid,
}
impl EEEEnvelope {
    pub fn with_span(self, span: &::tracing::Span) -> Self {
        Self { span: span.clone(), ..self }
    }
}
#[derive(::serde::Serialize, ::serde::Deserialize, Clone)]
pub enum CustomEvent {
    EventFields { value: u32 },
}
impl CustomEvent {
    pub fn new_event_fields(value: u32) -> EEEEnvelope {
        return EEEEnvelope {
            span: ::tracing::Span::current(),
            id: ::uuid::Uuid::new_v4(),
            event: CustomEvent::EventFields { value },
        };
    }
}
impl From<CustomEvent> for EEEEnvelope {
    fn from(input: CustomEvent) -> EEEEnvelope {
        EEEEnvelope {
            span: ::tracing::Span::current(),
            id: ::uuid::Uuid::new_v4(),
            event: input,
        }
    }
}
impl std::fmt::Debug for CustomEvent {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        match self {
            CustomEvent::EventFields { .. } => write!(f, stringify!(EventFields)),
            _ => write!(f, "Unknown Event"),
        }
    }
}
impl EventHandler {
    async fn test_processor_6(
        &self,
        env: EEEEnvelope,
        #[allow(unused)]
        queue: &mut ::std::collections::VecDeque<EEEEnvelope>,
    ) {
        let CustomEvent::EventFields { value } = env.event else {
            unreachable!();
        };
        {
            println!("Hello world!");
        }
    }
    fn __event_preprocess(&self, _event: &mut CustomEvent) {}
    #[tracing::instrument(skip_all, parent = &env.span)]
    pub async fn handle(
        &self,
        mut env: EEEEnvelope,
        queue: &mut ::std::collections::VecDeque<EEEEnvelope>,
    ) {
        use CustomEvent::*;
        tracing::debug!("handle: {:?}", & env.event);
        self.__event_preprocess(&mut env.event);
        match env.event {
            CustomEvent::EventFields { .. } => self.test_processor_6(env, queue).await,
        };
    }
    pub async fn run(&self, mut rx: ::tokio::sync::mpsc::Receiver<EEEEnvelope>) {
        let mut queue: ::std::collections::VecDeque<EEEEnvelope> = ::std::collections::VecDeque::new();
        loop {
            match rx.recv().await {
                Some(envelope) => queue.push_back(envelope),
                None => {
                    tracing::error!("event channel closed unexpectedly");
                    break;
                }
            }
            while let Ok(envelope) = rx.try_recv() {
                queue.push_back(envelope);
            }
            while let Some(envelope) = queue.pop_front() {
                self.handle(envelope, &mut queue).await;
            }
        }
    }
}
